# homeassistant-trannergy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
custom_components/trannergy/: __init__.py  api.py  config_flow.py  coordinator.py  sensor.py
tests/: conftest.py  frames.py  test_api.py  test_hacs.py  test_manifest.py  test_relative_imports.py  test_sensor_consistency.py
tests/ha/: conftest.py  test_config_flow.py  test_init.py  test_options_flow.py  test_platforms.py
